--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,12 @@
 name: Cypress Tests
 
 on: 
-    push:
-    schedule:
-    - cron: "0 2 * * 0-5"
+    workflow_dispatch:
+    inputs:
+      testBranch:
+        description: "Which branch to checkout and run test"
+        required: false
+        default: master
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
